<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/opportunity_rhaz"
        android:title="@string/rhaz"
        app:showAsAction="never" />
    <item
        android:id="@+id/opportunity_fhaz"
        android:title="@string/fhaz"
        app:showAsAction="never" />

    <item
        android:id="@+id/opportunity_navcam"
        android:title="@string/navcam"
        app:showAsAction="never" />

    <item
        android:id="@+id/opportunity_pancam"
        android:title="@string/pancam"
        app:showAsAction="never" />
    <item
        android:id="@+id/opportunity_minites"
        android:title="@string/minites"
        app:showAsAction="never" />

</menu>